Add bus/train/flight booking forms with pnr live status women seats senior citizen quota mock data migrated to data/lib